--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,8 @@
 
 }
 
+/* Typography */
+
 html {
   /* 62.5% of 16px = 10px */
   font-size: 62.5%;
@@ -62,3 +64,36 @@ p {
   
   }
 }
+/* Typography END*/
+
+/* Links */
+
+a{
+  text-decoration: none;
+}
+
+.link-arrow{
+  color: var(--color-accent);
+  text-transform: uppercase;
+  font-size: 2rem;
+  font-weight: bold;
+}
+
+.link-arrow::after{
+  content: '-->';
+  margin-left: 5px;
+  transition: margin 0.15s;
+}
+
+.link-arrow:hover::after {
+  margin-left: 10px;
+}
+
+@media screen and (min-width: 1024px){
+  .link-arrow{
+    font-size: 1.5rem;
+  }
+
+}
+
+/* Links END*/
