--- a/css/styles.css
+++ b/css/styles.css
@@ -2,10 +2,8 @@
   --color-primary: #2584ff;
   --color-secondary: #00d9ff;
   --color-accent: #ff3400;
-
   --color-headings: #1b0760;
   --color-body: #918ca4;
-
 }
 
 /* Typography */
@@ -16,7 +14,7 @@ html {
 }
 
 body {
-  font-family: 'Inter', Arial, Helvetica, sans-serif;
+  font-family: Inter, Arial, Helvetica, sans-serif;
   font-size: 2.4rem;
   line-height: 1.5;
   color: var(--color-body);
@@ -30,7 +28,6 @@ h3 {
 }
 
 h1 {
-  /* 1 x font size of the html elemnet */
   font-size: 7rem;
 }
 
@@ -40,7 +37,6 @@ h2 {
 
 h3 {
   font-size: 3rem;
-
 }
 
 p {
@@ -51,36 +47,34 @@ p {
   body {
     font-size: 1.8rem;
   }
+
   h1 {
     font-size: 8rem;
   }
-  
+
   h2 {
     font-size: 4rem;
   }
-  
+
   h3 {
     font-size: 2.4rem;
-  
   }
 }
-/* Typography END*/
 
 /* Links */
-
-a{
+a {
   text-decoration: none;
 }
 
-.link-arrow{
+.link-arrow {
   color: var(--color-accent);
   text-transform: uppercase;
   font-size: 2rem;
   font-weight: bold;
 }
 
-.link-arrow::after{
-  content: '-->';
+.link-arrow::after {
+  content: "-->";
   margin-left: 5px;
   transition: margin 0.15s;
 }
@@ -89,11 +83,44 @@ a{
   margin-left: 10px;
 }
 
-@media screen and (min-width: 1024px){
-  .link-arrow{
+@media screen and (min-width: 1024px) {
+  .link-arrow {
+    font-size: 1.5rem;
+  }
+}
+/* Links END*/
+
+/* Badges */
+
+.badge {
+  border-radius: 20px;
+  font-size: 2rem;
+  font-weight: 600;
+  padding: 0.5rem 2rem;
+  white-space: nowrap;
+}
+
+.badge--primary {
+  background: var(--color-primary);
+  color: #fff;
+}
+
+.badge--secondary {
+  background: var(--color-secondary);
+  color: #fff;
+}
+
+.badge--small {
+  font-size: 1.6rem;
+}
+
+@media screen and (min-width: 1024px) {
+  .badge {
     font-size: 1.5rem;
   }
 
+  .badge--small {
+    font-size: 1.2rem;
+  }
 }
-
-/* Links END*/
+/* Badges END*/
