Build the list component.

--- a/css/styles.css
+++ b/css/styles.css
@@ -88,6 +88,7 @@ a {
     font-size: 1.5rem;
   }
 }
+
 /* Links END*/
 
 /* Badges */
@@ -123,4 +124,36 @@ a {
     font-size: 1.2rem;
   }
 }
+
 /* Badges END*/
+
+/* Lists */
+
+.list {
+  list-style: none;
+  padding-left: 0;
+  color: var(--color-headings);
+}
+
+.list--inline .list__item {
+  display: inline-block;
+  margin-right: 2rem;
+}
+
+.list--tick {
+  list-style-image: url(../images/tick.svg);
+  padding-left: 3rem;
+  /* border: 1px solid; */
+}
+
+.list--tick .list__item {
+  padding-left: 0.5rem;
+  /* border: 1px solid; */
+  margin-bottom: 1rem;
+}
+
+@media screen and (min-width: 1024px) {
+  .list--tick .list__item{
+    padding-left: 0rem;
+  }
+}
