--- a/css/styles.css
+++ b/css/styles.css
@@ -121,6 +121,7 @@ a {
 
 .badge--small {
   font-size: 1.6rem;
+  padding: 0.5rem 1.5rem;
 }
 
 @media screen and (min-width: 1024px) {
@@ -146,6 +147,7 @@ a {
 .list--inline .list__item {
   display: inline-block;
   margin-right: 2rem;
+  
 }
 
 .list--tick {
@@ -158,6 +160,7 @@ a {
   padding-left: 0.5rem;
   /* border: 1px solid; */
   margin-bottom: 1rem;
+  color: var(--color-headings);
 }
 
 @media screen and (min-width: 1024px) {
@@ -287,5 +290,80 @@ a {
 @media screen and (min-width: 1024px) {
   .input {
     font-size: 1.5rem;
+  }
+}
+
+/* Card */
+.card {
+  border-radius: 7px;
+  box-shadow: 0 0 20px 10px #f3f3f3;
+  overflow: hidden;
+}
+
+.card__header ,.card__body {
+  padding: 2rem 3rem;
+}
+
+.card--primary .card__header {
+  background: var(--color-primary);
+  color: #fff;
+
+}
+.card--secondary .card__header {
+  background: var(--color-secondary);
+  color: #fff;
+
+}
+
+.card--secondary  .badge--secondary {
+  background: #02cdf1;
+}
+
+/* Plans */
+
+.plan__name {
+  color: #FFF;
+  margin: 0;
+  font-weight: 500;
+  font-size: 2.4rem;
+}
+
+.plan__price {
+  font-size: 6rem;
+}
+
+.plan__billing-cycle {
+  font-size: 2.4rem;
+  font-weight: 300;
+  opacity: 0.8;
+  margin-right: 1rem;
+}
+
+.plan__description {
+  font-size: 2rem;
+  font-weight: 300; 
+  letter-spacing: 1px;
+  display: block;
+}
+
+.plan .list__item{
+  margin-bottom: 2rem;
+}
+
+@media screen and (min-width: 1024px) {
+  .plan__name{
+    font-size: 1.4rem;
+  }
+
+  .plan__price{
+    font-size: 5rem;
+  }
+
+  .plan__billing-cycle {
+    font-size: 1.6rem;
+  }
+
+  .plan__description {
+    font-size: 1.7rem;
   }
 }
