--- a/css/styles.css
+++ b/css/styles.css
@@ -238,6 +238,12 @@ a {
   background: #00c8eb;
 }
 
+
+.btn--stretched {
+  padding-left: 6rem;
+  padding-right: 6rem;
+}
+
 .btn--accent {
   background: var(--color-accent);
   color: #fff;
@@ -515,5 +521,48 @@ a {
 
   .testimonial .quote {
     margin-left: 6rem;
+  }
+}
+
+/* Callout */
+
+.callout {
+  padding: 4rem;
+  border-radius: 5px;
+}
+
+.callout--primary {
+  background: var(--color-primary);
+  color: #FFF;
+}
+
+.callout__heading {
+  color: #FFF;
+  margin-top: 0;
+  font-size: 3rem;
+}
+
+.callout .btn {
+  justify-self: center;
+  align-self: center;
+}
+
+.callout__content {
+  text-align: center;
+}
+
+@media screen and (min-width: 768px) {
+  
+  .callout .grid--1x2 {
+    grid-template-columns: 1fr auto;
+  }
+  
+  .callout__content {
+    text-align: left;
+  }
+
+  .callout .btn {
+    justify-self: start;
+    margin: 0 2rem;
   }
 }
