--- a/components/collapsibles.html
+++ b/components/collapsibles.html
@@ -1,9 +1,23 @@
-<div class="callout callout--primary">
-  <div class="grid grid--1x2">
-    <div class="callout__content">
-      <h2 class="callout__heading">Ready to Get Started?</h2>
-      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sit praesentium facilis veniam minus iure, explicabo rerum reprehenderit soluta quas molestiae?</p>
-    </div>
-    <a href="" class="btn btn--secondary btn--stretched">Get Started</a>
+<div class="collapsible collapsible--expanded">
+  <header class="collapsible__header">
+    <h2 class="collapsible__heading">Item 1</h2>
+      <svg class="icon icon--white collapsible__chevron">
+        <use xlink:href="images/sprite.svg#chevron"></use>
+      </svg>
+  </header>
+  <div class="collapsible__content">
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione illum ex sed architecto quam, numquam debitis omnis voluptatem rem incidunt!
   </div>
 </div>
+
+<!-- <div class="collapsible collapsible--expanded">
+  <header class="collapsible__header">
+    <h2 class="collapsible__heading">Item 1</h2>
+      <svg class="icon icon--white collapsible__chevron">
+        <use xlink:href="images/sprite.svg#chevron"></use>
+      </svg>
+  </header>
+  <div class="collapsible__content">
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione illum ex sed architecto quam, numquam debitis omnis voluptatem rem incidunt!
+  </div>
+</div> -->
