--- a/css/styles.css
+++ b/css/styles.css
@@ -598,3 +598,46 @@ a {
   max-height: 100vh;
   opacity: 1;
 }
+
+/* Blocks */
+
+.block {
+  --padding-vertical:6rem;
+  padding: var(--padding-vertical) 2rem;
+  /* border: 2px solid red; */
+}
+
+.block__header {
+  text-align: center;
+}
+
+.block__heading {
+  margin-top: 0;
+  
+}
+
+.block--dark {
+  background: #000;
+  color: #7b857b;
+}
+
+.block--dark .block__heading {
+  color: #FFF;
+}
+
+.block--skwed-right {
+  padding-bottom: calc(var(--padding-vertical) + 4rem);
+  clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 80%);
+
+}
+
+.block--skwed-left {
+  padding-bottom: calc(var(--padding-vertical) + 4rem);
+  clip-path: polygon(0% 0%, 100% 0%, 100% 80%, 0% 100%);
+
+}
+
+.container {
+  max-width: 1140px;
+  margin: 0 auto;
+}
