--- a/css/styles.css
+++ b/css/styles.css
@@ -5,10 +5,10 @@
   --color-headings: #1b0760;
   /*  */
   --color-body: #918ca4;
-  --color-body-darker:#5c5577;
+  --color-body-darker: #5c5577;
   /*  */
-  --color-border:#ccc;
-  --border-radius:30px
+  --color-border: #ccc;
+  --border-radius: 30px
 }
 
 *,
@@ -150,7 +150,7 @@ a {
 .list--inline .list__item {
   display: inline-block;
   margin-right: 2rem;
-  
+
 }
 
 .list--tick {
@@ -268,7 +268,7 @@ a {
 
 .btn--outline:hover {
   background: var(--color-headings);
-  
+
   color: #fff;
 }
 
@@ -306,7 +306,7 @@ a {
 
 .input-group .btn {
   margin: 4px;
-  
+
 }
 
 @media screen and (min-width: 1024px) {
@@ -322,7 +322,8 @@ a {
   overflow: hidden;
 }
 
-.card__header ,.card__body {
+.card__header,
+.card__body {
   padding: 2rem 3rem;
 }
 
@@ -331,13 +332,14 @@ a {
   color: #fff;
 
 }
+
 .card--secondary .card__header {
   background: var(--color-secondary);
   color: #fff;
 
 }
 
-.card--secondary  .badge--secondary {
+.card--secondary .badge--secondary {
   background: #02cdf1;
 }
 
@@ -363,12 +365,12 @@ a {
 
 .plan__description {
   font-size: 2rem;
-  font-weight: 300; 
+  font-weight: 300;
   letter-spacing: 1px;
   display: block;
 }
 
-.plan .list__item{
+.plan .list__item {
   margin-bottom: 2rem;
 }
 
@@ -387,11 +389,11 @@ a {
 }
 
 @media screen and (min-width: 1024px) {
-  .plan__name{
+  .plan__name {
     font-size: 1.4rem;
   }
 
-  .plan__price{
+  .plan__price {
     font-size: 5rem;
   }
 
@@ -431,11 +433,11 @@ a {
   line-height: 1.3;
 }
 
-.quote__text::before{
+.quote__text::before {
   content: open-quote;
 }
 
-.quote__text::after{
+.quote__text::after {
   content: close-quote;
 }
 
@@ -458,7 +460,7 @@ a {
   bottom: 10px;
 }
 
-@media screen and (min-width: 1024px){
+@media screen and (min-width: 1024px) {
   .quote {
     font-size: 2rem;
     /* background-color: #424242; */
@@ -479,14 +481,14 @@ a {
   display: grid;
 }
 
-@media screen and (min-width: 768px){
+@media screen and (min-width: 768px) {
   .grid--1x2 {
     /* grid-template-columns: 1fr 1fr; */
     grid-template-columns: repeat(2, 1fr);
   }
 }
 
-@media screen and (min-width: 1024PX){
+@media screen and (min-width: 1024PX) {
   .grid--1x3 {
     /* grid-template-columns: 1fr 1fr 1fr; */
     grid-template-columns: repeat(3, 1fr);
@@ -499,21 +501,22 @@ a {
   padding: 3rem;
 }
 
-.testimonial__image{
+.testimonial__image {
   position: relative;
 }
 
-.testimonial__image > img {
+.testimonial__image>img {
   width: 100%;
 }
 
-.testimonial__image > .icon-container {
+.testimonial__image>.icon-container {
   position: absolute;
   top: 3rem;
   right: -32px;
 }
 
 @media screen and (min-width: 768px) {
+
   .testimonial .quote,
   .testimonial .quote__author {
     font-size: 2.4rem;
@@ -552,11 +555,11 @@ a {
 }
 
 @media screen and (min-width: 768px) {
-  
+
   .callout .grid--1x2 {
     grid-template-columns: 1fr auto;
   }
-  
+
   .callout__content {
     text-align: left;
   }
@@ -602,7 +605,7 @@ a {
 /* Blocks */
 
 .block {
-  --padding-vertical:6rem;
+  --padding-vertical: 6rem;
   padding: var(--padding-vertical) 2rem;
   /* border: 2px solid red; */
 }
@@ -613,7 +616,7 @@ a {
 
 .block__heading {
   margin-top: 0;
-  
+
 }
 
 .block--dark {
@@ -640,4 +643,67 @@ a {
 .container {
   max-width: 1140px;
   margin: 0 auto;
+}
+
+/* Navigation */
+.nav {
+  background: #000;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  padding: 0 1rem;
+  align-items: center;
+}
+
+/* FOR LOGO TO BE centerd in the middle with a hamburger menu  */
+.test__logo {
+  display: flex;
+  align-items: center;
+}
+.nav__list {
+  width: 100%;
+  margin: 0;
+}
+
+.nav__item {
+  padding: 0.5rem 2rem;
+  border-bottom: 1px solid #222;
+}
+
+.nav__item>a {
+  color: #d2d0db;
+  transition: color 0.3s;
+}
+
+.nav__item>a:hover {
+  color: #FFF;
+}
+
+.nav__toggler {
+  opacity: 0.5;
+  transition: box-shadow .15s;
+  cursor: pointer;
+}
+
+.nav.collapsible--expanded .nav__toggler {
+  opacity: 1;
+  box-shadow: 0 0 0 3px #666;
+  border-radius: 5px;
+}
+
+@media screen and (min-width: 768px){
+  .nav__toggler{
+    display: none;
+  }
+
+  .nav__list {
+    width: auto;
+    display: flex;
+    font-size: 1.6rem;
+    max-height: 100%;
+    opacity: 1;
+  }
+  .nav__item{
+    border: 0;
+  }
 }
